--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
